clusters/lab/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
  namespace: it-tools
spec:
  selector:
    app.kubernetes.io/name: it-tools
  ports:
    - name: http
      port: 80
      targetPort: http
